--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
-name = "backend"
+name = "ovm-bridges"
 version = "0.1.0"
 description = ""
 authors = ["Marco Germanier <marco@mrgt.me>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.12"
 
 
 [build-system]
