--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 streamlit = "^1.39.0"
-chainbase-python-sdk = {git = "https://github.com/germanier/chainbase_python_sdk"}
-pandas = "^2.2.3"
-numpy = "^2.1.2"
+pandas = "^2.1.3"
+numpy = ">=1.22.4,<2"
 st-web3-modal = "^0.6.0"
+chainbase-python-sdk = {git = "https://github.com/germanier/chainbase_python_sdk"}
 
 
 [tool.poetry.group.dev.dependencies]
