--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ streamlit = "^1.39.0"
 pandas = "^2.1.3"
 numpy = ">=1.22.4,<2"
 st-web3-modal = "^0.6.0"
-chainbase-python-sdk = {git = "https://github.com/germanier/chainbase_python_sdk"}
+chainbase-sdk = {git = "https://github.com/germanier/chainbase_python_sdk"}
 
 
 [tool.poetry.group.dev.dependencies]
